--- a/python/.gitlab-ci.yml
+++ b/python/.gitlab-ci.yml
@@ -34,7 +34,7 @@ test:python:
   image: docker.io/python:$PYTHON_VERSIONS
   parallel:
     matrix:
-      - PYTHON_VERSIONS: [ "3.6", "3.7", "3.8", "3.9" ]
+      - PYTHON_VERSIONS: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
   script:
     - pip install tox
     - make headers
